# GraphicsViewEx

./: .clang-format  .gitignore  CMakeLists.txt  GraphicUtility.cc  GraphicUtility.h  README.md  main.cc  main.h
control/: DragAction.cc  DragAction.h  GraphicsControl.cc  GraphicsControl.h  PolylineDrag.cc  PolylineDrag.h
core/: DragAction.h  GraphicsView.cc  GraphicsView.h
data/: DataParse.cc  DataParse.h  DataSave.cc  DataSave.h  GraphicsDocument.cc  GraphicsDocument.h  GraphicsMaker.cc  GraphicsMaker.h  RuntimeFlag.h  SaveFlags.h  SindyKiwi.cc  SindyKiwi.h  kiwi.cc  kiwi.h  schema.cc  schema.h  schema.kiwi
graphics/: BasicGraphic.cc  BasicGraphic.h  BoxGraphic.cc  BoxGraphic.h  ChipGraphic.cc  ChipGraphic.h  DragAction.cc  DragAction.h  GeAim.cc  GeAim.h  GeArc.cc  GeArc.h  GeBezier.cc  GeBezier.h  GeBox.cc  GeBox.h  GePolygon.cc  GePolygon.h  GePolyline.cc  GePolyline.h  GePolylineIndex.cc  GePolylineIndex.h  GeSegment.cc  GeSegment.h  GeSquarePoints.cc  GeSquarePoints.h  GeSymbolPoint.cc  GeSymbolPoint.h  IGeGraphic.cc  IGeGraphic.h  IGePoint.cc  IGePoint.h  IGePointSet.cc  IGePointSet.h  PointGraphic.cc  PointGraphic.h  PolylineDrag.cc  PolylineDrag.h  PolylineGraphic.cc  PolylineGraphic.h  (+2 more)
utility/: BoostBoolean.cc  BoostBoolean.h  JsonData.cc  JsonData.h  SindyMath.h  box2d.cc  extents2d.cc  extents2d.h  sindy_arc2d.cc  sindy_arc2d.h  sindy_box2d.cc  sindy_box2d.h  sindy_geometry.h  sindy_math.cc  sindy_math.h  sindy_point2d.h  utility.cc  utility.h
view/: GraphicsArchive.cc  GraphicsArchive.h  GraphicsScene.cc  GraphicsScene.h  GraphicsView.cc  GraphicsView.h  PropertyTable.cc  PropertyTable.h
